--- a/src/app/views/base/assignments/assignments.component.html
+++ b/src/app/views/base/assignments/assignments.component.html
@@ -22,7 +22,7 @@
           (expanded)="expanded($event)"
           [collapse]="isCollapsed"
         >
-          <table class="table table-striped table-hover table-responsive-sm">
+          <table class="table table-striped table-hover table-responsive-sm table-responsive-md table-responsive-lg">
             <thead>
               <tr>
                 <th>#</th>
@@ -100,7 +100,7 @@
           (expanded)="expanded($event)"
           [collapse]="isCollapsed"
         >
-          <table class="table table-striped table-hover table-responsive-sm">
+          <table class="table table-striped table-hover table-responsive-sm table-responsive-md table-responsive-lg">
             <thead>
               <tr>
                 <th>#</th>
@@ -203,7 +203,7 @@
           (expanded)="expanded($event)"
           [collapse]="isCollapsed"
         >
-          <table class="table table-striped table-hover table-responsive-sm">
+          <table class="table table-striped table-hover table-responsive-sm table-responsive-md table-responsive-lg">
             <thead>
               <tr>
                 <th>Student Name</th>
