--- a/src/app/views/base/quizzes/quizzes.component.html
+++ b/src/app/views/base/quizzes/quizzes.component.html
@@ -22,7 +22,7 @@
           (expanded)="expanded($event)"
           [collapse]="isCollapsed"
         >
-          <table class="table table-striped table-hover table-responsive-sm">
+          <table class="table table-striped table-hover table-responsive-sm table-responsive-md table-responsive-lg">
             <thead>
               <tr>
                 <th>#</th>
@@ -47,22 +47,53 @@
                 <td>15</td>
                 <td>8</td>
                 <td>10</td>
-                <td><span class="badge badge-success">Submitted</span></td>
+                <td><span class="badge badge-success">Attemped</span></td>
                 <td>
                   <div class="pl-2 pr-2 text-center">
                     <button
                       class="btn p-0"
-                      popover="Upload"
+                      popover="View"
                       triggers="mouseenter:mouseleave"
                     >
-                      <span><i class="text-info fa fa-upload"></i> </span>
+                      <span><i class="text-success fa fa-eye"></i> </span>
                     </button>
                     <button
                       class="btn p-0 ml-2"
-                      popover="Download"
+                      popover="Attempt"
+                      triggers="mouseenter:mouseleave"
+                      hidden="true"
+                    >
+                      <span> <i class="text-success fa fa-pencil"></i> </span>
+                    </button>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <td>1</td>
+                <td>Project Charter</td>
+                <td>2012/01/01</td>
+                <td>2012/01/01</td>
+                <td>2012/01/01</td>
+                <td>15</td>
+                <td>8</td>
+                <td>10</td>
+                <td><span class="badge badge-warning">Pending</span></td>
+                <td>
+                  <div class="pl-2 pr-2 text-center">
+                    <button
+                      class="btn p-0"
+                      popover="View"
+                      triggers="mouseenter:mouseleave"
+                      hidden="true"
+                    >
+                      <span><i class="text-success fa fa-eye"></i> </span>
+                    </button>
+                    <button
+                      class="btn p-0 ml-2"
+                      popover="Attempt"
                       triggers="mouseenter:mouseleave"
                     >
-                      <span> <i class="text-success fa fa-download"></i> </span>
+                      <span> <i class="text-success fa fa-pencil"></i> </span>
                     </button>
                   </div>
                 </td>
@@ -84,7 +115,7 @@
   <div class="col-sm-12">
     <div class="card">
       <div class="card-header">
-        <h3 class="d-inline">Add Assignments Page TEACHER</h3>
+        <h3 class="d-inline">Quizzes Page TEACHER</h3>
       </div>
     </div>
     <div class="animated fadeIn">
@@ -102,14 +133,19 @@
           (expanded)="expanded($event)"
           [collapse]="isCollapsed"
         >
-          <table class="table table-striped table-hover table-responsive-sm">
+          <table class="table table-striped table-hover table-responsive-sm table-responsive-md table-responsive-lg">
             <thead>
               <tr>
                 <th>#</th>
                 <th>Title</th>
+                <th>Made On</th>
                 <th>Added On</th>
                 <th>Due Date</th>
+                <th>Time (min)</th>
+                <th>Average Marks</th>
                 <th>Total Marks</th>
+                <th>Status</th>
+                <th>Attemped By</th>
                 <th class="text-center">Controls</th>
               </tr>
             </thead>
@@ -119,118 +155,69 @@
                 <td>Project Charter</td>
                 <td>2012/01/01</td>
                 <td>2012/01/01</td>
+                <td>2012/01/01</td>
+                <td>15</td>
+                <td>8.5</td>
                 <td>10</td>
+                <td><span class="badge badge-warning">Not Uploaded</span></td>
+                <td>N/A</td>
                 <td>
                   <div class="pl-2 pr-2 text-center">
                     <button class="btn p-0">
                       <span popover="Edit" triggers="mouseenter:mouseleave">
-                        <i class="text-success fa fa-edit"></i
+                        <i class="text-info fa fa-edit"></i
                       ></span>
                     </button>
                     <button class="btn p-0 ml-2">
                       <span popover="Delete" triggers="mouseenter:mouseleave">
-                        <i class="text-success fa fa-trash"></i>
+                        <i class="text-danger fa fa-trash"></i>
+                      </span>
+                    </button>
+                    <button class="btn p-0 ml-2">
+                      <span popover="Upload" triggers="mouseenter:mouseleave">
+                        <i class="text-warning fa fa-upload"></i>
+                      </span>
+                    </button>
+                    <button class="btn p-0 ml-2">
+                      <span popover="View" triggers="mouseenter:mouseleave">
+                        <i class="text-success fa fa-eye"></i>
                       </span>
                     </button>
                   </div>
                 </td>
               </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- ******************************** SUBMITTED ASSIGNMENTS PAGE TEACHER *****************************-->
-<!-- ******************************** SUBMITTED ASSIGNMENTS PAGE TEACHER *****************************-->
-<!-- ******************************** SUBMITTED ASSIGNMENTS PAGE TEACHER *****************************-->
-<!-- ******************************** SUBMITTED ASSIGNMENTS PAGE TEACHER *****************************-->
-
-<div class="row">
-  <div class="col-sm-12">
-    <div class="card">
-      <div class="card-header">
-        <h3 class="d-inline">Submitted Assignments Page TEACHER</h3>
-      </div>
-    </div>
-    <div class="animated fadeIn">
-      <div class="card">
-        <div class="card-header">
-          <label
-            for="className"
-            class="font-weight-bold"
-            (click)="isCollapsed = !isCollapsed"
-            >Subject Name Here</label
-          >
-
-          <div class="btn-group float-right" dropdown>
-            <button
-              id="button-basic"
-              dropdownToggle
-              type="button"
-              class="btn btn-primary dropdown-toggle btn-sm"
-              aria-controls="dropdown-basic"
-            >
-              Assignment No <span class="caret"></span>
-            </button>
-            <ul
-              id="dropdown-basic"
-              *dropdownMenu
-              class="dropdown-menu"
-              role="menu"
-              aria-labelledby="button-basic"
-            >
-              <li role="menuitem">
-                <a class="dropdown-item p-1 pl-2" href="#">Action</a>
-              </li>
-              <li role="menuitem">
-                <a class="dropdown-item p-1 pl-2" href="#">Another action</a>
-              </li>
-              <li role="menuitem">
-                <a class="dropdown-item p-1 pl-2" href="#"
-                  >Something else here</a
-                >
-              </li>
-              <li class="divider dropdown-divider"></li>
-              <li role="menuitem">
-                <a class="dropdown-item p-1 pl-2" href="#">Separated link</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div
-          (collapsed)="collapsed($event)"
-          (expanded)="expanded($event)"
-          [collapse]="isCollapsed"
-        >
-          <table class="table table-striped table-hover table-responsive-sm">
-            <thead>
               <tr>
-                <th>Student Name</th>
-                <th>Title</th>
-                <th>Due Date</th>
-                <th>Submitted On</th>
-                <th>Obtained Marks</th>
-                <th>Total Marks</th>
-                <th>Status</th>
-                <th class="text-center">Controls</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Name</td>
+                <td>1</td>
                 <td>Project Charter</td>
                 <td>2012/01/01</td>
                 <td>2012/01/01</td>
-                <td>8</td>
+                <td>2012/01/01</td>
+                <td>15</td>
+                <td>8.5</td>
                 <td>10</td>
-                <td><span class="badge badge-success">Submitted</span></td>
+                <td><span class="badge badge-success">Uploaded</span></td>
+                <td>10/50</td>
                 <td>
                   <div class="pl-2 pr-2 text-center">
-                    <button class="btn p-0"  popover="Download" triggers="mouseenter:mouseleave">
-                      <span> <i class="text-success fa fa-download"></i> </span>
+                    <button class="btn p-0">
+                      <span popover="Edit" triggers="mouseenter:mouseleave">
+                        <i class="text-info fa fa-edit"></i
+                      ></span>
+                    </button>
+                    <button class="btn p-0 ml-2">
+                      <span popover="Delete" triggers="mouseenter:mouseleave">
+                        <i class="text-danger fa fa-trash"></i>
+                      </span>
+                    </button>
+                    <button class="btn p-0 ml-2" hidden="true">
+                      <span popover="Upload" triggers="mouseenter:mouseleave">
+                        <i class="text-info fa fa-upload"></i>
+                      </span>
+                    </button>
+                    <button class="btn p-0 ml-2">
+                      <span popover="View" triggers="mouseenter:mouseleave">
+                        <i class="text-success fa fa-eye"></i>
+                      </span>
                     </button>
                   </div>
                 </td>
