--- a/src/app/views/base/createquiz/createquiz.component.html
+++ b/src/app/views/base/createquiz/createquiz.component.html
@@ -66,12 +66,13 @@
       <div class="animated fadeIn">
         <div class="card">
           <div class="card-header">
-            <label class="font-weight-bold">Subject Name Here</label>
+            <label class="font-weight-bold">{{ quizForm.value.subject }}</label>
             <div class="pl-2 pr-2 float-right">
               <button
                 class="btn p-0"
                 popover="View"
                 triggers="mouseenter:mouseleave"
+                (click)="staticModal.show()"
               >
                 <span><i class="text-success fa fa-eye"></i> </span>
               </button>
@@ -243,3 +244,35 @@
     </div>
   </div>
 </form>
+
+<div
+  class="modal fade"
+  bsModal
+  #staticModal="bs-modal"
+  [config]="{ backdrop: 'static' }"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="dialog-static-name"
+>
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 id="dialog-static-name" class="modal-title pull-left">
+          Static modal
+        </h4>
+        <button
+          type="button"
+          class="close pull-right"
+          aria-label="Close"
+          (click)="staticModal.hide()"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        This is static modal, backdrop click will not close it. Click
+        <b>&times;</b> to close modal.
+      </div>
+    </div>
+  </div>
+</div>
